--- a/drake/examples/Atlas/config/control_config_sim.yaml
+++ b/drake/examples/Atlas/config/control_config_sim.yaml
@@ -23,7 +23,7 @@ kinematic_tree_metadata:
     neck: [neck_ay]
     back_bkz: back_bkz
     back_bky: back_bky
-    
+
 joint_names:
   - back_bkz
   - back_bky
@@ -123,7 +123,7 @@ qp_controller_params:
       zero_ankles_on_contact: false
       eta: 0.001
       delta_max: 10
-    integrator: 
+    integrator:
       eta: 0.0
     W_kdot: 0
     Kp_ang: 0
@@ -138,7 +138,7 @@ qp_controller_params:
       l_zmp: 10
       l_com: 6.324555320336759 # 2 * sqrt(l_zmp)
     input_specific:
-      DEFAULT: 
+      DEFAULT:
         hardware:
           joint_is_force_controlled: true
           joint_is_position_controlled: false
@@ -152,13 +152,49 @@ qp_controller_params:
           ff_qd_d: 0
 
   base: # automatically inherits from the default =
-  standing: 
+  standing:
   manip:
     body_specific:
       *L_HAND_NAME :
         weight: 0.001
       *R_HAND_NAME :
         weight: 0.001
+
+  gravity_compensation:
+    position_specific:
+      DEFAULT:
+        qdd_bounds:
+          min: -10000000
+          max: 10000000
+      # r_arm_shz: {Kp: 0}
+      # r_arm_shx: {Kp: 0}
+      # r_arm_ely: {Kp: 0}
+      # r_arm_elx: {Kp: 0}
+      # r_arm_uwy: {Kp: 0}
+      # r_arm_mwx: {Kp: 0}
+      # r_arm_lwy: {Kp: 0}
+      # l_arm_shz: {Kp: 0}
+      # l_arm_shx: {Kp: 0}
+      # l_arm_ely: {Kp: 0}
+      # l_arm_elx: {Kp: 0}
+      # l_arm_uwy: {Kp: 0}
+      # l_arm_mwx: {Kp: 0}
+      # l_arm_lwy: {Kp: 0}
+      r_leg_hpz: {w_qdd: 10, Kp: 20000, damping_ratio: 0.8}
+      r_leg_hpx: {w_qdd: 10, Kp: 20000, damping_ratio: 0.8}
+      r_leg_hpy: {w_qdd: 10, Kp: 20000, damping_ratio: 0.8}
+      r_leg_kny: {w_qdd: 10, Kp: 20000, damping_ratio: 0.8}
+      r_leg_aky: {w_qdd: 10, Kp: 20000, damping_ratio: 0.8}
+      r_leg_akx: {w_qdd: 10, Kp: 20000, damping_ratio: 0.8}
+      l_leg_hpz: {w_qdd: 10, Kp: 20000, damping_ratio: 0.8}
+      l_leg_hpx: {w_qdd: 10, Kp: 20000, damping_ratio: 0.8}
+      l_leg_hpy: {w_qdd: 10, Kp: 20000, damping_ratio: 0.8}
+      l_leg_kny: {w_qdd: 10, Kp: 20000, damping_ratio: 0.8}
+      l_leg_aky: {w_qdd: 10, Kp: 20000, damping_ratio: 0.8}
+      l_leg_akx: {w_qdd: 10, Kp: 20000, damping_ratio: 0.8}
+      back_bkx:
+        Kp: 150
+        w_qdd: 0.001
 
   walking:
     body_specific:
@@ -176,7 +212,7 @@ qp_controller_params:
         damping_ratio: 0.5
         weight: 0.001
     position_specific:
-      DEFAULT: 
+      DEFAULT:
         w_qdd: 0
         damping_ratio: 0.5
       r_leg_hpz: {w_qdd: 1e-6, damping_ratio: 0.5}
@@ -205,7 +241,7 @@ qp_controller_params:
       l_arm_uwy: {w_qdd: 1e-4, damping_ratio: 0.5}
       l_arm_mwx: {w_qdd: 1e-4, damping_ratio: 0.5}
       l_arm_lwy: {w_qdd: 1e-4, damping_ratio: 0.5}
-      back_bkx: 
+      back_bkx:
         w_qdd: 0.1
         Kp: 50
         damping_ratio: 0.5
@@ -234,7 +270,7 @@ qp_controller_params:
         damping_ratio: 0.5
         weight: 0.001
     position_specific:
-      DEFAULT: 
+      DEFAULT:
         w_qdd: 0
         damping_ratio: 0.5
       r_leg_hpz: {w_qdd: 1e-6, damping_ratio: 0.5}
@@ -263,7 +299,7 @@ qp_controller_params:
       l_arm_uwy: {w_qdd: 1e-4, damping_ratio: 0.5}
       l_arm_mwx: {w_qdd: 1e-4, damping_ratio: 0.5}
       l_arm_lwy: {w_qdd: 1e-4, damping_ratio: 0.5}
-      back_bkx: 
+      back_bkx:
         w_qdd: 0.1
         Kp: 50
         damping_ratio: 0.5
@@ -382,7 +418,7 @@ qp_controller_params:
         integrator:
           gain: 0
           clamp: 0
-      base_x: 
+      base_x:
         Kp: 0
         w_qdd: 1
       base_y:
